--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@web3-react/walletconnect-connector": "^6.2.8",
     "@web3-react/walletlink-connector": "^6.2.8",
     "authereum": "^0.1.14",
+    "big-integer": "^1.6.51",
+    "big-number": "^2.0.0",
     "fortmatic": "^2.2.1",
     "install": "^0.13.0",
     "npm": "^7.21.0",
